added next finished project
Added FitApp page project

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -46,7 +46,7 @@
     ".*"
   ],
   "server": {
-    "port": 7879,
+    "port": 7800,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
@@ -55,13 +55,13 @@
     }
   },
   "browser-sync": {
-    "enable": true,
+    "enable": false,
     "clicks": true,
     "forms": false,
     "scroll": true
   },
   "live-reload": {
-    "enable": true,
+    "enable": false,
     "animate": true,
     "delay": 0
   },
