added new effect to footer icons

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -55,13 +55,13 @@
     }
   },
   "browser-sync": {
-    "enable": false,
+    "enable": true,
     "clicks": true,
     "forms": false,
     "scroll": true
   },
   "live-reload": {
-    "enable": false,
+    "enable": true,
     "animate": true,
     "delay": 0
   },
