minified drawer css and included that in index

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,12 +6,14 @@
     {
       "path": "css/scss.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/css.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+    },
+    {
+      "path": "css/drawer.css",
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"css/drawer.min.css\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
     }
   ],
   "fileTree": {
-    "expandedDirs": [
-      "css"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
