--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,5 +1,5 @@
 {
-  "name": "cv_pagev2",
+  "name": "cv_pagev3",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [
@@ -10,10 +10,20 @@
     {
       "path": "css/drawer.css",
       "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"css/drawer.min.css\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "css/style-mobile.css",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "css/style-desk.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "css"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -48,7 +58,7 @@
     ".*"
   ],
   "server": {
-    "port": 7800,
+    "port": 7887,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
