splited SCSS files

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -10,10 +10,20 @@
     {
       "path": "css/drawer.css",
       "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"css/drawer.min.css\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "css/style-mobile.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+    },
+    {
+      "path": "css/style-desktop.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     }
   ],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "css"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -26,7 +36,20 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "css/style-desktop.scss",
+      "imports": [
+        "css/_variables.scss"
+      ]
+    },
+    {
+      "path": "css/style-mobile.scss",
+      "imports": [
+        "css/_variables.scss"
+      ]
+    }
+  ],
   "projectView": {
     "selectedView": "file-tree"
   },
